5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4486/executions/1590_1017.log
== TEST (2019-03-30 12:49:02) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

import math
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2:")))

d = (6371.01)* math.acos(((sin(t1))*(sin(t2))) + ((cos(t1))*(cos(t2))* (cos(g1-g2)))
print(round(d,2))
-- ERROR:
File "XXXX", line 12
    print(round(d,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 12:51:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

import math
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2:")))

d = (6371.01)* math.acos(((sin(t1))*(sin(t2))) + ((cos(t1))*(cos(t2))* (cos(g1-g2)))
output = round(d,2)
								 
print(output)
-- ERROR:
File "XXXX", line 12
    output = round(d,2)
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 12:52:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

import math
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2:")))

x = (6371.01)* math.acos(((sin(t1))*(sin(t2))) + ((cos(t1))*(cos(t2))* (cos(g1-g2)))
output = round(x, 5)
								 
print(output)
-- ERROR:
File "XXXX", line 12
    output = round(x, 5)
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 12:54:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

import math
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2:")))

x = (6371.01)* math.acos(((sin(t1))*(sin(t2))) + ((cos(t1))*(cos(t2))* (cos(g1-g2)))
print(round(x, 5))
-- ERROR:
File "XXXX", line 12
    print(round(x, 5))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:19:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

import math
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2:")))

x = (6371.01)* math.acos(((math.sin(t1))*(math.sin(t2))) + ((math.cos(t1))*(math.cos(t2))* (math.cos(g1-g2)))
print(round(x, 5))
-- ERROR:
File "XXXX", line 12
    print(round(x, 5))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:20:16) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

import math
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2:")))

x = (6371.01) * math.acos(((math.sin(t1))*(math.sin(t2))) + ((math.cos(t1))*(math.cos(t2))* (math.cos(g1-g2)))
print(x)
-- ERROR:
File "XXXX", line 12
    print(x)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:20:35) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

import math
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2:")))

x = (6371.01) * math.acos(((math.sin(t1))*(math.sin(t2))) + ((math.cos(t1))*(math.cos(t2))* (math.cos(g1-g2)))
print(round(x,2))
-- ERROR:
File "XXXX", line 12
    print(round(x,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:22:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

import math
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2:")))

x = (6371.01) * (A+B)
A = math.acos(((math.sin(t1))*(math.sin(t2))) 
B = ((math.cos(t1))*(math.cos(t2))* (math.cos(g1-g2)))
print(round(x,2))
-- ERROR:
File "XXXX", line 13
    B = ((math.cos(t1))*(math.cos(t2))* (math.cos(g1-g2)))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:23:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

import math
t1 = math.radians(float(input("Latitude de P1: ")))
g1 = math.radians(float(input("Longitude de P1:")))
t2 = math.radians(float(input("Latitude de P2: ")))
g2 = math.radians(float(input("Longitude de P2:")))

x = (6371.01)* math.acos(((math.sin(t1))*(math.sin(t2))) + ((math.cos(t1))*(math.cos(t2))* (math.cos(g1-g2)))
print(round(x,2))
-- ERROR:
File "XXXX", line 12
    print(round(x,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:46:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

import math
t1 = math.radians(float(input("Latitude de P1: ")))
g1 = math.radians(float(input("Longitude de P1:")))
t2 = math.radians(float(input("Latitude de P2: ")))
g2 = math.radians(float(input("Longitude de P2:")))

x = (6371.01) * math.acos(y)
y = ((math.sin(t1))*(math.sin(t2))) + ((math.cos(t1))*(math.cos(t2))* (math.cos(g1-g2))
print(round(x,2))
-- ERROR:
File "XXXX", line 13
    print(round(x,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:47:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

import math
t1 = math.radians(float(input("Latitude de P1: ")))
g1 = math.radians(float(input("Longitude de P1:")))
t2 = math.radians(float(input("Latitude de P2: ")))
g2 = math.radians(float(input("Longitude de P2:")))

x = (6371.01) * math.acos(y)
y = ((math.sin(t1))*(math.sin(t2))) + ((math.cos(t1))*(math.cos(t2))* (math.cos(g1-g2))
print(round(x,2))
													
													
-- ERROR:
File "XXXX", line 13
    print(round(x,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:15:51) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

import math
t1 = math.radians(float(input("Latitude de P1: ")))
g1 = math.radians(float(input("Longitude de P1:")))
t2 = math.radians(float(input("Latitude de P2: ")))
g2 = math.radians(float(input("Longitude de P2:")))

x = (6371.01) * math.acos(y)
y = ((math.sin(t1))*(math.sin(t2))) + ((math.cos(t1))*(math.cos(t2))* (math.cos(g1-g2))
print(round(x,2))
													
													
-- ERROR:
File "XXXX", line 13
    print(round(x,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:16:28) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

import math
t1 = math.radians(float(input("Latitude de P1: ")))
g1 = math.radians(float(input("Longitude de P1:")))
t2 = math.radians(float(input("Latitude de P2: ")))
g2 = math.radians(float(input("Longitude de P2:")))

d = (6371.01) * math.acos(y)
y = ((math.sin(t1))*(math.sin(t2))) + ((math.cos(t1))*(math.cos(t2))* (math.cos(g1-g2))
print round(d,2)
													
													
-- ERROR:
File "XXXX", line 13
    print round(d,2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:16:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

import math
t1 = math.radians(float(input("Latitude de P1: ")))
g1 = math.radians(float(input("Longitude de P1:")))
t2 = math.radians(float(input("Latitude de P2: ")))
g2 = math.radians(float(input("Longitude de P2:")))

d = (6371.01) * math.acos(y)
y = ((math.sin(t1))*(math.sin(t2))) + ((math.cos(t1))*(math.cos(t2))* (math.cos(g1-g2))
print (math.round(d,2))
													
													
-- ERROR:
File "XXXX", line 13
    print (math.round(d,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:16:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

import math
t1 = math.radians(float(input("Latitude de P1: ")))
g1 = math.radians(float(input("Longitude de P1:")))
t2 = math.radians(float(input("Latitude de P2: ")))
g2 = math.radians(float(input("Longitude de P2:")))

d = (6371.01) * math.acos(y)
y = ((math.sin(t1))*(math.sin(t2))) + ((math.cos(t1))*(math.cos(t2))* (math.cos(g1-g2))
print (round(d,2))
													
													
-- ERROR:
File "XXXX", line 13
    print (round(d,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:18:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

import math
t1 = math.radians(float(input("Latitude de P1: ")))
g1 = math.radians(float(input("Longitude de P1:")))
t2 = math.radians(float(input("Latitude de P2: ")))
g2 = math.radians(float(input("Longitude de P2:")))

d = (6371.01) * math.acos(y)
y = ((math.sin(t1))*(math.sin(t2))) + ((math.cos(t1))*(math.cos(t2))* (math.cos(g1-g2))
print (float(round(d,2)))
													
													
-- ERROR:
File "XXXX", line 13
    print (float(round(d,2)))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:20:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from <math> import *

t1 = math.radians(float(input("Latitude de P1: ")))
g1 = math.radians(float(input("Longitude de P1:")))
t2 = math.radians(float(input("Latitude de P2: ")))
g2 = math.radians(float(input("Longitude de P2:")))

d = (6371.01) * math.acos(y)
y = ((math.sin(t1))*(math.sin(t2))) + ((math.cos(t1))*(math.cos(t2))* (math.cos(g1-g2))
print (float(round(d,2)))
													
													
-- ERROR:
File "XXXX", line 4
    from <math> import *
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:20:10) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from <math> import 

t1 = math.radians(float(input("Latitude de P1: ")))
g1 = math.radians(float(input("Longitude de P1:")))
t2 = math.radians(float(input("Latitude de P2: ")))
g2 = math.radians(float(input("Longitude de P2:")))

d = (6371.01) * math.acos(y)
y = ((math.sin(t1))*(math.sin(t2))) + ((math.cos(t1))*(math.cos(t2))* (math.cos(g1-g2))
print (float(round(d,2)))
													
													
-- ERROR:
File "XXXX", line 4
    from <math> import 
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:20:15) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from <math> 

t1 = math.radians(float(input("Latitude de P1: ")))
g1 = math.radians(float(input("Longitude de P1:")))
t2 = math.radians(float(input("Latitude de P2: ")))
g2 = math.radians(float(input("Longitude de P2:")))

d = (6371.01) * math.acos(y)
y = ((math.sin(t1))*(math.sin(t2))) + ((math.cos(t1))*(math.cos(t2))* (math.cos(g1-g2))
print (float(round(d,2)))
													
													
-- ERROR:
File "XXXX", line 4
    from <math> 
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:20:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math 

t1 = math.radians(float(input("Latitude de P1: ")))
g1 = math.radians(float(input("Longitude de P1:")))
t2 = math.radians(float(input("Latitude de P2: ")))
g2 = math.radians(float(input("Longitude de P2:")))

d = (6371.01) * math.acos(y)
y = ((math.sin(t1))*(math.sin(t2))) + ((math.cos(t1))*(math.cos(t2))* (math.cos(g1-g2))
print (float(round(d,2)))
													
													
-- ERROR:
File "XXXX", line 13
    print (float(round(d,2)))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:20:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math 

t1 = math.radians(float(input("Latitude de P1: ")))
g1 = math.radians(float(input("Longitude de P1:")))
t2 = math.radians(float(input("Latitude de P2: ")))
g2 = math.radians(float(input("Longitude de P2:")))

d = (6371.01) * math.acos(y)
y = ((math.sin(t1))*(math.sin(t2))) + ((math.cos(t1))*(math.cos(t2))* (math.cos(g1-g2))
print (float(round(d,2)))
													
													
-- ERROR:
File "XXXX", line 13
    print (float(round(d,2)))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:21:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math 

t1 = math.radians(float(input("Latitude de P1: ")))
g1 = math.radians(float(input("Longitude de P1:")))
t2 = math.radians(float(input("Latitude de P2: ")))
g2 = math.radians(float(input("Longitude de P2:")))

d = (6371.01) * math.acos(y)
y = ((math.sin(t1))*(math.sin(t2))) + ((math.cos(t1))*(math.cos(t2))* (math.cos(g1-g2))
print (round(d,2))
													
													
-- ERROR:
File "XXXX", line 13
    print (round(d,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:21:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import * 

t1 = math.radians(float(input("Latitude de P1: ")))
g1 = math.radians(float(input("Longitude de P1:")))
t2 = math.radians(float(input("Latitude de P2: ")))
g2 = math.radians(float(input("Longitude de P2:")))

d = (6371.01) * math.acos(y)
y = ((math.sin(t1))*(math.sin(t2))) + ((math.cos(t1))*(math.cos(t2))* (math.cos(g1-g2))
print (round(d,2))
													
													
-- ERROR:
File "XXXX", line 13
    print (round(d,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:21:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import * 

t1 = math.radians(float(input("Latitude de P1: ")))
g1 = math.radians(float(input("Longitude de P1:")))
t2 = math.radians(float(input("Latitude de P2: ")))
g2 = math.radians(float(input("Longitude de P2:")))

d = (6371.01) * math.acos(y)
y = ((math.sin(t1))*(math.sin(t2))) + ((math.cos(t1))*(math.cos(t2))* (math.cos(g1-g2))
print (round(d,2))
													
													
-- ERROR:
File "XXXX", line 13
    print (round(d,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:26:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import * 

t1 = math.radians(float(input("Latitude de P1: ")))
g1 = math.radians(float(input("Longitude de P1:")))
t2 = math.radians(float(input("Latitude de P2: ")))
g2 = math.radians(float(input("Longitude de P2:")))

d = (6371.01) * acos(y)
y = ((sin(t1))*(sin(t2))) + ((cos(t1))*(cos(t2))* (cos(g1-g2))
print (round(d,2))
													
													
-- ERROR:
File "XXXX", line 13
    print (round(d,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:27:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import * 

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2:")))

d = (6371.01) * acos(y)
y = ((sin(t1))*(sin(t2))) + ((cos(t1))*(cos(t2))* (cos(g1-g2))
print (round(d,2))
													
													
-- ERROR:
File "XXXX", line 13
    print (round(d,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 23:27:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import * 

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2:")))

d = (6371.01) * acos(y)
y = ((sin(t1))*(sin(t2))) + ((cos(t1))*(cos(t2))* (cos(g1-g2))
print (round(d,2))
													
													
-- EXECUTION TIME:
0.119957
-- ERROR:
  File "/home/codebench/codes/1590/1017/main.py", line 13
    print (round(d,2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:19:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import * 

t1 = radians(float(input()))
g1 = radians(float(input()))
t2 = radians(float(input()))
g2 = radians(float(input()))

d = (6371.01) * acos(y)
y = ((sin(t1))*(sin(t2))) + ((cos(t1))*(cos(t2))* (cos(g1-g2))
print (round(d,2))
													
													
-- ERROR:
File "XXXX", line 13
    print (round(d,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:21:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import * 

t1 = radians(float(input()))
g1 = radians(float(input()))
t2 = radians(float(input()))
g2 = radians(float(input()))

r = 6371.01
d =  r * acos (sin(t1)*sin(t2) + cos(t1)*cos(t2)* cos(g1-g2))
print (round(d,2))
													
													
-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 18:21:56) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import * 

t1 = radians(float(input()))
g1 = radians(float(input()))
t2 = radians(float(input()))
g2 = radians(float(input()))

r = 6371.01
d =  r * acos (sin(t1)*sin(t2) + cos(t1)*cos(t2)* cos(g1-g2))
print (round(d,2))
													
													
-- EXECUTION TIME:
0.194596
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
